# ChatGPT-Handson

./: Dockerfile  README.md  chatgpt_bot.py  pyproject.toml
.devcontainer/: devcontainer.json
